# fmu-pem

./: .gitignore  404.html  README.md  SECURITY.md  command-line-runs.html  difference-properties.html  effective-mineral-properties.html  effective-pressure.html  ert-configuration.html  fluid-properties.html  fluid_properties.html  hashmap.json  import-sim-results.html  index.html  mineral-properties.html  model-file-formats.html  pem-configuration.html  pyproject.toml  saturated-rock.html  save-results.html  use-cases.html  yaml-validation.html
.github/: release-please-config.json
ERT/: run_pem.ert
assets/: command-line-runs.md.9hJhFJvL.js  command-line-runs.md.9hJhFJvL.lean.js  difference-properties.md.nDQ6IA5n.js  difference-properties.md.nDQ6IA5n.lean.js  effective-mineral-properties.md.CXoRA4sO.js  effective-mineral-properties.md.CXoRA4sO.lean.js  effective-pressure.md.CE40zT5a.lean.js  effective-pressure.md.IkI7au5U.js  effective-pressure.md.IkI7au5U.lean.js  ert-configuration.md.BFs8WnFt.js  ert-configuration.md.BfEfK0j7.js  ert-configuration.md.BfEfK0j7.lean.js  ert-configuration.md.CH2Mam-7.js  ert-configuration.md.CH2Mam-7.lean.js  ert-configuration.md.CNw_ta9G.js  ert-configuration.md.CNw_ta9G.lean.js  ert-configuration.md.q_oY-4Me.js  ert-configuration.md.q_oY-4Me.lean.js  fluid-properties.md.Cp9ex8O9.js  fluid-properties.md.Cp9ex8O9.lean.js  fluid_properties.md.BhL0w101.js  fluid_properties.md.BhL0w101.lean.js  fluid_properties.md.CeziawW6.js  fluid_properties.md.CeziawW6.lean.js  import-sim-results.md.vbG29Jy_.js  import-sim-results.md.vbG29Jy_.lean.js  index.md.CAPtNcmo.js  mineral-properties.md.B8YdS8N1.js  mineral-properties.md.B8YdS8N1.lean.js  model-file-formats.md.9ifa5D8h.js  model-file-formats.md.9ifa5D8h.lean.js  pem-configuration.md.-im3CscF.js  pem-configuration.md.AzYUETl7.lean.js  pem-configuration.md.B32JaV8-.js  (+42 more)
(+88 files in other folders)
